fixed weird asana overflowX issue

--- a/workflows/asana-card/app/styles/_tasks.scss
+++ b/workflows/asana-card/app/styles/_tasks.scss
@@ -23,8 +23,8 @@ $input-height: 60px;
 
   .drag-placeholder {
     width: 100%;
-    height: 4px;
-    border-radius: 2px;
+    height: 40px;
+    //border-radius: 2px;
     background: $blue-100;
   }
   &.semi-compact{
